# win-system32-dlls

AUDIOKSE.dll/: AUDIOKSE.dll.cpp  AUDIOKSE.dll.x64.cmd  AUDIOKSE.dll.x86.cmd  CMakeLists.txt
ActionCenter.dll/: ActionCenter.dll.cpp  ActionCenter.dll.x64.cmd  ActionCenter.dll.x86.cmd  CMakeLists.txt
ActionCenterCPL.dll/: ActionCenterCPL.dll.cpp  ActionCenterCPL.dll.x64.cmd  ActionCenterCPL.dll.x86.cmd  CMakeLists.txt
AdmTmpl.dll/: AdmTmpl.dll.cpp  AdmTmpl.dll.def  AdmTmpl.dll.obj.asm  AdmTmpl.dll.x64.cmd  AdmTmpl.dll.x86.cmd  CMakeLists.txt
AltTab.dll/: AltTab.dll.cpp  AltTab.dll.x64.cmd  AltTab.dll.x86.cmd  CMakeLists.txt
AppIdPolicyEngineApi.dll/: AppIdPolicyEngineApi.dll.cpp  AppIdPolicyEngineApi.dll.x64.cmd  AppIdPolicyEngineApi.dll.x86.cmd  CMakeLists.txt
Apphlpdm.dll/: Apphlpdm.dll.cpp  Apphlpdm.dll.def  Apphlpdm.dll.obj.asm  Apphlpdm.dll.x64.cmd  Apphlpdm.dll.x86.cmd  CMakeLists.txt
AudioEng.dll/: AudioEng.dll.cpp  AudioEng.dll.def  AudioEng.dll.obj.asm  AudioEng.dll.x64.cmd  AudioEng.dll.x86.cmd  CMakeLists.txt
AudioSes.dll/: AudioSes.dll.cpp  AudioSes.dll.x64.cmd  AudioSes.dll.x86.cmd  CMakeLists.txt
AuditNativeSnapIn.dll/: AuditNativeSnapIn.dll.cpp  AuditNativeSnapIn.dll.x64.cmd  AuditNativeSnapIn.dll.x86.cmd  CMakeLists.txt
AuditPolicyGPInterop.dll/: AuditPolicyGPInterop.dll.cpp  AuditPolicyGPInterop.dll.x64.cmd  AuditPolicyGPInterop.dll.x86.cmd  CMakeLists.txt
AuthFWGP.dll/: AuthFWGP.dll.cpp  AuthFWGP.dll.x64.cmd  AuthFWGP.dll.x86.cmd  CMakeLists.txt
AuxiliaryDisplayApi.dll/: AuxiliaryDisplayApi.dll.cpp  AuxiliaryDisplayApi.dll.x64.cmd  AuxiliaryDisplayApi.dll.x86.cmd  CMakeLists.txt
AuxiliaryDisplayCpl.dll/: AuxiliaryDisplayCpl.dll.cpp  AuxiliaryDisplayCpl.dll.x64.cmd  AuxiliaryDisplayCpl.dll.x86.cmd  CMakeLists.txt
AzSqlExt.dll/: AzSqlExt.dll.cpp  AzSqlExt.dll.def  AzSqlExt.dll.obj.asm  AzSqlExt.dll.x64.cmd  AzSqlExt.dll.x86.cmd  CMakeLists.txt
BWContextHandler.dll/: BWContextHandler.dll.cpp  BWContextHandler.dll.x64.cmd  BWContextHandler.dll.x86.cmd  CMakeLists.txt
BWUnpairElevated.dll/: BWUnpairElevated.dll.cpp  BWUnpairElevated.dll.x64.cmd  BWUnpairElevated.dll.x86.cmd  CMakeLists.txt
BioCredProv.dll/: BioCredProv.dll.cpp  BioCredProv.dll.x64.cmd  BioCredProv.dll.x86.cmd  CMakeLists.txt
CHxReadingStringIME.dll/: CHxReadingStringIME.dll.cpp  CHxReadingStringIME.dll.def  CHxReadingStringIME.dll.obj.asm  CHxReadingStringIME.dll.x64.cmd  CHxReadingStringIME.dll.x86.cmd  (+1 more)
DevicePairing.dll/: CMakeLists.txt  DevicePairing.dll.cpp  DevicePairing.dll.x64.cmd  DevicePairing.dll.x86.cmd
ELSCore.dll/: CMakeLists.txt  ELSCore.dll.cpp  ELSCore.dll.def  ELSCore.dll.obj.asm  ELSCore.dll.x64.cmd  ELSCore.dll.x86.cmd
FXSAPI.dll/: CMakeLists.txt  FXSAPI.dll.cpp  FXSAPI.dll.def  FXSAPI.dll.obj.asm  FXSAPI.dll.x64.cmd  FXSAPI.dll.x86.cmd
FwRemoteSvr.dll/: CMakeLists.txt  FwRemoteSvr.dll.cpp  FwRemoteSvr.dll.def  FwRemoteSvr.dll.obj.asm  FwRemoteSvr.dll.x64.cmd  FwRemoteSvr.dll.x86.cmd
HelpPaneProxy.dll/: CMakeLists.txt  HelpPaneProxy.dll.cpp  HelpPaneProxy.dll.x64.cmd  HelpPaneProxy.dll.x86.cmd
NlsData001b.dll/: CMakeLists.txt  NlsData001b.dll.cpp  NlsData001b.dll.x64.cmd  NlsData001b.dll.x86.cmd
PresentationNative_v0300.dll/: CMakeLists.txt  PresentationNative_v0300.dll.cpp  PresentationNative_v0300.dll.def  PresentationNative_v0300.dll.obj.asm  PresentationNative_v0300.dll.x64.cmd  PresentationNative_v0300.dll.x86.cmd
RpcRtRemote.dll/: CMakeLists.txt  RpcRtRemote.dll.cpp  RpcRtRemote.dll.def  RpcRtRemote.dll.obj.asm  RpcRtRemote.dll.x64.cmd  RpcRtRemote.dll.x86.cmd
SqlServerSpatial150.dll/: CMakeLists.txt  SqlServerSpatial150.dll.cpp  SqlServerSpatial150.dll.def  SqlServerSpatial150.dll.obj.asm  SqlServerSpatial150.dll.x64.cmd  SqlServerSpatial150.dll.x86.cmd
SyncHostps.dll/: CMakeLists.txt  SyncHostps.dll.cpp  SyncHostps.dll.x64.cmd  SyncHostps.dll.x86.cmd
VAN.dll/: CMakeLists.txt  VAN.dll.cpp  VAN.dll.def  VAN.dll.obj.asm  VAN.dll.x64.cmd  VAN.dll.x86.cmd
VSPerf160.dll/: CMakeLists.txt  VSPerf160.dll.cpp  VSPerf160.dll.def  VSPerf160.dll.obj.asm  VSPerf160.dll.x64.cmd  VSPerf160.dll.x86.cmd
WPDShServiceObj.dll/: CMakeLists.txt  WPDShServiceObj.dll.cpp  WPDShServiceObj.dll.x64.cmd  WPDShServiceObj.dll.x86.cmd
WinSync.dll/: CMakeLists.txt  WinSync.dll.cpp  WinSync.dll.x64.cmd  WinSync.dll.x86.cmd
WinSyncProviders.dll/: CMakeLists.txt  WinSyncProviders.dll.cpp  WinSyncProviders.dll.x64.cmd  WinSyncProviders.dll.x86.cmd
WlS0WndH.dll/: CMakeLists.txt  WlS0WndH.dll.cpp  WlS0WndH.dll.def  WlS0WndH.dll.obj.asm  WlS0WndH.dll.x64.cmd  WlS0WndH.dll.x86.cmd
XpsGdiConverter.dll/: CMakeLists.txt  XpsGdiConverter.dll.cpp  XpsGdiConverter.dll.x64.cmd  XpsGdiConverter.dll.x86.cmd
adsnt.dll/: CMakeLists.txt  adsnt.dll.cpp  adsnt.dll.x64.cmd  adsnt.dll.x86.cmd
aspnet_counters.dll/: CMakeLists.txt  aspnet_counters.dll.cpp  aspnet_counters.dll.def  aspnet_counters.dll.obj.asm  aspnet_counters.dll.x64.cmd  aspnet_counters.dll.x86.cmd
authz.dll/: CMakeLists.txt  authz.dll.cpp  authz.dll.def  authz.dll.obj.asm  authz.dll.x64.cmd  authz.dll.x86.cmd
batmeter.dll/: CMakeLists.txt  batmeter.dll.cpp  batmeter.dll.def  batmeter.dll.obj.asm  batmeter.dll.x64.cmd  batmeter.dll.x86.cmd
bitsprx6.dll/: CMakeLists.txt  bitsprx6.dll.cpp  bitsprx6.dll.x64.cmd  bitsprx6.dll.x86.cmd
cmcfg32.dll/: CMakeLists.txt  cmcfg32.dll.cpp  cmcfg32.dll.def  cmcfg32.dll.obj.asm  cmcfg32.dll.x64.cmd  cmcfg32.dll.x86.cmd
devrtl.dll/: CMakeLists.txt  devrtl.dll.cpp  devrtl.dll.def  devrtl.dll.obj.asm  devrtl.dll.x64.cmd  devrtl.dll.x86.cmd
dssenh.dll/: CMakeLists.txt  dssenh.dll.cpp  dssenh.dll.x64.cmd  dssenh.dll.x86.cmd
elsTrans.dll/: CMakeLists.txt  elsTrans.dll.cpp  elsTrans.dll.def  elsTrans.dll.obj.asm  elsTrans.dll.x64.cmd  elsTrans.dll.x86.cmd
glu32.dll/: CMakeLists.txt  glu32.dll.cpp  glu32.dll.def  glu32.dll.obj.asm  glu32.dll.x64.cmd  glu32.dll.x86.cmd
kbd101b.dll/: CMakeLists.txt  kbd101b.dll.cpp  kbd101b.dll.x64.cmd  kbd101b.dll.x86.cmd
kbd106n.dll/: CMakeLists.txt  kbd106n.dll.cpp  kbd106n.dll.x64.cmd  kbd106n.dll.x86.cmd
(+6642 files in other folders)
